added swagger BearerAuth setting for protected endpoints
